--- a/Protótipo_de_telas/css/corpo.css
+++ b/Protótipo_de_telas/css/corpo.css
@@ -6,3 +6,9 @@ h1{
     font-family: 'Poiret One', cursive; 
     font-size:50px; 
 }
+textarea {
+  max-width: 340px;
+  max-height: 80px;
+  width: 340px;
+  height: 80px;
+}
