--- a/Protótipo_de_telas/css/style.css
+++ b/Protótipo_de_telas/css/style.css
@@ -18,15 +18,11 @@ ul li a:hover {
 .menu {
     background-color: #696969;
     width: 100%; 
-    height:50px;
-    padding-top: 5px;
+    height:70px;
     padding-bottom: 10px;
 }
-nav ul ul{
-    display: none;
-}
-nav ul li:hover > ul{
-    display: block;
+nav {
+    margin: 0 auto;
 }
 nav ul{
     list-style: none;
@@ -36,9 +32,27 @@ nav ul{
 nav ul:after{
     content: ""; clear: both; display: block;
 }
+
+nav ul li:hover > ul{
+    display: block;
+}
 nav ul li{
     float: left;
-    margin: 0 25px 0 25px;
+}
+nav ul ul li:hover {
+    background: #4b545f;
+    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+}
+nav ul li a {
+    display: block; 
+    padding: 15px 20px;
+    color: #fff; 
+    text-decoration: none;
+}
+nav ul ul{
+    display: none;
 }
 nav ul ul {
     background: #5f6975; border-radius: 0px; padding: 0;
@@ -47,12 +61,15 @@ nav ul ul {
 nav ul ul li {
     float: none; 
     border-top: 1px solid #6b727c;
-    border-bottom: 1px solid #575f6a; position: relative;
-    margin: 5px 15px 5px 15px;
+    border-bottom: 1px solid #575f6a; 
+    position: relative;
 }
 nav ul ul li a {
     color: #fff;
 }   
+nav ul ul ul {
+    position: absolute; left: 100%; top:0;
+}
 
 
 
